LibHTTP: Enable unity build

--- a/Libraries/LibHTTP/CMakeLists.txt
+++ b/Libraries/LibHTTP/CMakeLists.txt
@@ -16,3 +16,4 @@ set(SOURCES
 
 ladybird_lib(LibHTTP http)
 target_link_libraries(LibHTTP PRIVATE LibCompress LibCore LibCrypto LibDatabase LibFileSystem LibIPC LibRegex LibTextCodec LibTLS LibUnicode LibURL)
+set_target_properties(LibHTTP PROPERTIES UNITY_BUILD ${LADYBIRD_ENABLE_UNITY_BUILD})
