LibJS: Enable unity build

--- a/Libraries/LibJS/CMakeLists.txt
+++ b/Libraries/LibJS/CMakeLists.txt
@@ -279,6 +279,8 @@ set(GENERATED_SOURCES Bytecode/Op.cpp)
 
 ladybird_lib(LibJS js EXPLICIT_SYMBOL_EXPORT)
 
+set_target_properties(LibJS PROPERTIES UNITY_BUILD ${LADYBIRD_ENABLE_UNITY_BUILD})
+
 find_package(simdjson CONFIG REQUIRED)
 target_link_libraries(LibJS PRIVATE simdjson::simdjson)
 
