LibRegex: Enable unity build

--- a/Libraries/LibRegex/CMakeLists.txt
+++ b/Libraries/LibRegex/CMakeLists.txt
@@ -12,3 +12,5 @@ endif()
 
 ladybird_lib(LibRegex regex EXPLICIT_SYMBOL_EXPORT)
 target_link_libraries(LibRegex PRIVATE LibUnicode)
+
+set_target_properties(LibRegex PROPERTIES UNITY_BUILD ${LADYBIRD_ENABLE_UNITY_BUILD})
