LibThreading: Enable unity build

--- a/Libraries/LibThreading/CMakeLists.txt
+++ b/Libraries/LibThreading/CMakeLists.txt
@@ -6,6 +6,8 @@ set(SOURCES
 ladybird_lib(LibThreading threading)
 target_link_libraries(LibThreading PRIVATE LibCore)
 
+set_target_properties(LibThreading PROPERTIES UNITY_BUILD ${LADYBIRD_ENABLE_UNITY_BUILD})
+
 if (WIN32)
     find_package(pthread REQUIRED)
     target_include_directories(LibThreading PUBLIC $<BUILD_INTERFACE:${PTHREAD_INCLUDE_DIR}>)
