LibWeb: Enable unity build
This commit enables unity build in LibWeb. The number of jobs per batch
is something that still needs tuning but 16 or 32 seem to be optimal.

--- a/Libraries/LibWeb/CMakeLists.txt
+++ b/Libraries/LibWeb/CMakeLists.txt
@@ -1202,6 +1202,12 @@ set(GENERATED_SOURCES
 
 ladybird_lib(LibWeb web EXPLICIT_SYMBOL_EXPORT)
 
+set_target_properties(LibWeb PROPERTIES
+    UNITY_BUILD ${LADYBIRD_ENABLE_UNITY_BUILD}
+    UNITY_BUILD_UNIQUE_ID "LIBWEB_UNITY_ID"
+    UNITY_BUILD_BATCH_SIZE 16
+)
+
 find_package(LibXml2 REQUIRED)
 
 target_link_libraries(LibWeb PRIVATE LibCore LibCompress LibCrypto LibJS LibHTTP LibGfx LibIPC LibRegex LibSyntax LibTextCodec LibUnicode LibMedia LibWasm LibXML LibIDL LibURL LibTLS LibRequests LibGC LibThreading skia ${ANGLE_TARGETS} SDL3::SDL3 LibXml2::LibXml2)
