CI+Meta: Enable tests for All_Debug CI job, excluding some tests
Add testing step to All_Debug CI in order to avoid introduction of
debug macro related faults. Currently these might sneak by if a
developer makes changes to some code that uses debug macros, but
doesn't run the tests with those debug macros enabled.

Several issues have already been identified and solved using All_Debug
test verification.

 see ladybird PRs: #6263, #6264, #6953, #7535
 and ladybird Issues: #7129

Tests excluded:
   test-web (LibWeb)
   All Benchmarks, TestRegex is the most problematic test
   test-js-bytecode
   test-js-ast

LibWeb is excluded as it takes too long to run, there are several
tests that always fail, and under ctest too much output is generated
resulting in ctest crashing due to failed memory allocation, even on
a system with 64GB of RAM. Ctest crashes using about 41GB, with RAM
still available and swap not used at all.

Benchmark tests have similar issues taking too long or using too much
memory, so they must be excluded using TESTS_ONLY env variable.

test-js-bytecode and test-js-ast currently excluded as they fail due
to the debug macro output in the comparison file vs baseline diffs.
It might be possible to re-enable these if the output can be cleaned up.

On our current CI setup, All_Debug tests take approximately 3 minutes.

--- a/.github/workflows/lagom-template.yml
+++ b/.github/workflows/lagom-template.yml
@@ -199,7 +199,7 @@ jobs:
           UBSAN_OPTIONS: 'log_path="${{ github.workspace }}/ubsan.log"'
 
       - name: Test
-        if: ${{ inputs.build_preset != 'Fuzzers' && inputs.build_preset != 'All_Debug' && inputs.build_preset != 'Sanitizer' }}
+        if: ${{ inputs.build_preset != 'Fuzzers' && inputs.build_preset != 'Sanitizer' }}
         working-directory: ${{ github.workspace }}
         run: ctest --output-on-failure --test-dir Build --timeout 1800
         env:
