LibHTTP+LibWebView+RequestServer: Allow users to set disk cache limits
This adds a settings box to about:settings to allow users to limit the
disk cache size. This will override the default 5 GiB limit. We do not
automatically delete cache data if the new limit is suddenly less than
the used disk space; this will happen on the next request. This allows
multiple changes to the settings in a row without thrashing the cache.

In the future, we can add more toggles, such as disabling the disk
cache altogether.

--- a/Libraries/LibHTTP/CMakeLists.txt
+++ b/Libraries/LibHTTP/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCES
     Cache/CacheEntry.cpp
     Cache/CacheIndex.cpp
     Cache/DiskCache.cpp
+    Cache/DiskCacheSettings.cpp
     Cache/MemoryCache.cpp
     Cache/Utilities.cpp
     Cookie/Cookie.cpp
