Tests: Add tests for data providers exiting the suspended state
These tests would crash before the prior commit.

--- a/Tests/LibMedia/CMakeLists.txt
+++ b/Tests/LibMedia/CMakeLists.txt
@@ -3,6 +3,7 @@ include(audio)
 set(TEST_SOURCES
     TestAudioDataProvider.cpp
     TestCICP.cpp
+    TestDataProviders.cpp
     TestH264Decode.cpp
     TestIncrementallyPopulatedStream.cpp
     TestMatroskaDemuxer.cpp
