--- a/Libraries/LibHTTP/CMakeLists.txt
+++ b/Libraries/LibHTTP/CMakeLists.txt
@@ -4,6 +4,8 @@ set(SOURCES
     Cache/DiskCache.cpp
     Cache/MemoryCache.cpp
     Cache/Utilities.cpp
+    Cookie/Cookie.cpp
+    Cookie/ParsedCookie.cpp
     Header.cpp
     HeaderList.cpp
     HTTP.cpp
@@ -12,4 +14,4 @@ set(SOURCES
 )
 
 ladybird_lib(LibHTTP http)
-target_link_libraries(LibHTTP PRIVATE LibCompress LibCore LibCrypto LibDatabase LibFileSystem LibIPC LibRegex LibTextCodec LibTLS LibURL)
+target_link_libraries(LibHTTP PRIVATE LibCompress LibCore LibCrypto LibDatabase LibFileSystem LibIPC LibRegex LibTextCodec LibTLS LibUnicode LibURL)
