Tests: Add a test for convert_to_int

--- a/Tests/LibWeb/CMakeLists.txt
+++ b/Tests/LibWeb/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(TEST_SOURCES
+    TestAbstractOperations.cpp
     TestCSSIDSpeed.cpp
     TestContentFilter.cpp
     TestControlMessageQueue.cpp
@@ -18,6 +19,7 @@ foreach(source IN LISTS TEST_SOURCES)
     ladybird_test("${source}" LibWeb LIBS LibWeb)
 endforeach()
 
+target_link_libraries(TestAbstractOperations PRIVATE LibGC LibJS)
 target_link_libraries(TestContentFilter PRIVATE LibURL)
 target_link_libraries(TestFetchURL PRIVATE LibURL)
 
