LibJS: Extract ScopePusher into its own file
Move ScopePusher from Parser.cpp into ScopePusher.h and
ScopePusher.cpp. No behavioral changes, pure code move.

--- a/Libraries/LibJS/CMakeLists.txt
+++ b/Libraries/LibJS/CMakeLists.txt
@@ -264,6 +264,7 @@ set(SOURCES
     Runtime/WeakSetPrototype.cpp
     Runtime/WrapForValidIteratorPrototype.cpp
     Runtime/WrappedFunction.cpp
+    ScopePusher.cpp
     Script.cpp
     SourceCode.cpp
     SourceTextModule.cpp
