Meta: Disable shared libraries when using vcpkg on OpenBSD and NetBSD
This is for the simple reason of not mixing static and shared libraries
as that doesn't seem like a good idea and linking with ffmpeg tends to
fail when using a setup like that.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ project(ladybird
         HOMEPAGE_URL "https://ladybird.org"
 )
 
-if (ANDROID OR IOS)
+if (ANDROID OR IOS OR (CMAKE_TOOLCHAIN_FILE MATCHES "vcpkg.cmake$" AND CMAKE_SYSTEM_NAME MATCHES "(Open|Net)BSD"))
     set(BUILD_SHARED_LIBS OFF)
 endif()
 
