Tests/LibJS: Add test-js-ast infrastructure
Add a test runner for AST dump tests, modeled after test-js-bytecode.
Tests consist of JS input files and expected AST dump output, verified
by parsing with --parse-only --dump-ast --disable-ansi-colors.

--- a/Tests/LibJS/CMakeLists.txt
+++ b/Tests/LibJS/CMakeLists.txt
@@ -9,3 +9,10 @@ add_custom_command(
     COMMAND "${CMAKE_COMMAND}" -E copy "${ladybird_SOURCE_DIR}/Tests/LibJS/test-js-bytecode.py" "${CMAKE_BINARY_DIR}/bin/test-js-bytecode"
     DEPENDS "${ladybird_SOURCE_DIR}/Tests/LibJS/test-js-bytecode.py"
 )
+
+add_custom_target(test-js-ast ALL DEPENDS js "${CMAKE_BINARY_DIR}/bin/test-js-ast")
+add_custom_command(
+    OUTPUT "${CMAKE_BINARY_DIR}/bin/test-js-ast"
+    COMMAND "${CMAKE_COMMAND}" -E copy "${ladybird_SOURCE_DIR}/Tests/LibJS/test-js-ast.py" "${CMAKE_BINARY_DIR}/bin/test-js-ast"
+    DEPENDS "${ladybird_SOURCE_DIR}/Tests/LibJS/test-js-ast.py"
+)
