LibGfx: Enable explicit symbol export
This commit enables explicit symbol export for LibGfx. This decreases
the number of exported symbols from around ~1500 to ~400.

--- a/Libraries/LibGfx/CMakeLists.txt
+++ b/Libraries/LibGfx/CMakeLists.txt
@@ -81,7 +81,7 @@ if (HAS_FONTCONFIG)
     list(APPEND SOURCES Font/GlobalFontConfig.cpp)
 endif()
 
-ladybird_lib(LibGfx gfx)
+ladybird_lib(LibGfx gfx EXPLICIT_SYMBOL_EXPORT)
 
 target_link_libraries(LibGfx PRIVATE LibCompress LibCore LibCrypto LibFileSystem LibTextCodec LibIPC LibUnicode)
 
