LibCore: Implement ProcessStatistics on Windows
This commit implements ProcessStatistics on windows. This allows using
the task manager view.

--- a/Libraries/LibCore/CMakeLists.txt
+++ b/Libraries/LibCore/CMakeLists.txt
@@ -96,7 +96,9 @@ if (LINUX)
     list(APPEND SOURCES Platform/ProcessStatisticsLinux.cpp)
 elseif (APPLE AND NOT IOS)
     list(APPEND SOURCES Platform/ProcessStatisticsMach.cpp)
-else ()
+elseif (WIN32)
+    list(APPEND SOURCES Platform/ProcessStatisticsWindows.cpp)
+else()
     list(APPEND SOURCES Platform/ProcessStatisticsUnimplemented.cpp)
 endif()
 
