Tests: Rename TestFunction -> TestFunctionObjC

--- a/Tests/AK/CMakeLists.txt
+++ b/Tests/AK/CMakeLists.txt
@@ -103,13 +103,13 @@ if (WIN32)
 endif()
 
 if (CXX_COMPILER_SUPPORTS_BLOCKS)
-    ladybird_test(TestFunction.mm AK NAME TestFunction)
-    target_link_libraries(TestFunction PRIVATE ${BLOCKS_REQUIRED_LIBRARIES})
+    ladybird_test(TestFunctionObjC.mm AK NAME TestFunctionObjC)
+    target_link_libraries(TestFunctionObjC PRIVATE ${BLOCKS_REQUIRED_LIBRARIES})
 endif()
 if (CXX_COMPILER_SUPPORTS_OBJC_ARC)
-    ladybird_test(TestFunction.mm AK NAME TestFunctionArc)
-    target_compile_options(TestFunctionArc PRIVATE -fobjc-arc)
-    target_link_libraries(TestFunction PRIVATE ${BLOCKS_REQUIRED_LIBRARIES})
+    ladybird_test(TestFunctionObjC.mm AK NAME TestFunctionObjCArc)
+    target_compile_options(TestFunctionObjCArc PRIVATE -fobjc-arc)
+    target_link_libraries(TestFunctionObjCArc PRIVATE ${BLOCKS_REQUIRED_LIBRARIES})
 endif()
 
 target_link_libraries(TestString PRIVATE LibUnicode)
