Meta: Fix optional dictionary wrapping in IDL generator
Handle Optional<T> and Optional<Variant<...>> correctly when wrapping
dictionary members, and make ComputedEffectTiming.localTime optional
to distinguish absence from null.

--- a/Meta/gn/secondary/Userland/Libraries/LibWeb/idl_files.gni
+++ b/Meta/gn/secondary/Userland/Libraries/LibWeb/idl_files.gni
@@ -119,6 +119,11 @@ standard_idl_files = [
   "//Userland/Libraries/LibWeb/Geometry/DOMRect.idl",
   "//Userland/Libraries/LibWeb/Geometry/DOMRectList.idl",
   "//Userland/Libraries/LibWeb/Geometry/DOMRectReadOnly.idl",
+  "//Userland/Libraries/LibWeb/MediaCapture/MediaDeviceInfo.idl",
+  "//Userland/Libraries/LibWeb/MediaCapture/MediaDevices.idl",
+  "//Userland/Libraries/LibWeb/MediaCapture/MediaStream.idl",
+  "//Userland/Libraries/LibWeb/MediaCapture/MediaStreamTrack.idl",
+  "//Userland/Libraries/LibWeb/MediaCapture/MediaStreamTrackEvent.idl",
   "//Userland/Libraries/LibWeb/HighResolutionTime/Performance.idl",
   "//Userland/Libraries/LibWeb/HTML/AudioTrack.idl",
   "//Userland/Libraries/LibWeb/HTML/AudioTrackList.idl",
