LibWebView+WebContent: Add ProcessPolicyRouter to broker process
Hopefully, one day this empty switch statement will be filled with
workers, helpers, and service processes. This is a step towards
breaking audio IO device management and playback out of WebContent and
into a singleton AudioServer process. It's one step closer to not
needing user privs for WebContent.

--- a/Libraries/LibWebView/CMakeLists.txt
+++ b/Libraries/LibWebView/CMakeLists.txt
@@ -18,6 +18,7 @@ set(SOURCES
     Process.cpp
     ProcessHandle.cpp
     ProcessManager.cpp
+    ProcessPolicyRouter.cpp
     SearchEngine.cpp
     Settings.cpp
     SiteIsolation.cpp
