AK: Implement exponential cpu backoff
This commit implements an exponential backoff strategy for spin loops.
This is needed for blocking push/pop operations on ring buffers. After
a set number pause instructions control is yielded back to the OS
scheduler. As pause instructions vary drastically in length, it would be
best to implement this using wait instructions, but they are not
available on all hardware.

--- a/AK/CMakeLists.txt
+++ b/AK/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCES
     CircularBuffer.cpp
     ConstrainedStream.cpp
     CountingStream.cpp
+    CpuBackoff.cpp
     Error.cpp
     FlyString.cpp
     Format.cpp
