LibAudioServer: Add Services/AudioServer audio device service
Lay the groundwork for WebContent to deliver audio streams to a global
AudioServer process through shared memory ring buffers. LibMedia
still uses AudioMixingSink to mix media element tracks in-process.
But it should no longer interact with the OS device layer. Instead,
WebContent (and potentially other clients) open an output session to
the AudioServer singleton and ask for an output stream.

AudioServer maintains a single device callback thread (per output
device) and mixes incoming streams for that device before passing to
that device. It provides a cross platform enumeration surface for input
and output, default and non-default, and provides playback to any
output as well as microphone (and other) input streams.

This commit includes code for the AudioServer process along with the
client library "LibAudioServer" with struct defs, IPC, and helper utils

--- a/Libraries/CMakeLists.txt
+++ b/Libraries/CMakeLists.txt
@@ -21,6 +21,7 @@ add_subdirectory(LibWebSocket)
 add_subdirectory(LibXML)
 
 if (ENABLE_GUI_TARGETS)
+    add_subdirectory(LibAudioServer)
     add_subdirectory(LibDevTools)
     add_subdirectory(LibGfx)
     add_subdirectory(LibImageDecoderClient)
