--- a/Meta/gn/secondary/Ladybird/BUILD.gn
+++ b/Meta/gn/secondary/Ladybird/BUILD.gn
@@ -51,6 +51,7 @@ config("ladybird_config") {
 }
 
 ladybird_helper_processes = [
+  "AudioServer",
   "ImageDecoder",
   "RequestServer",
   "WebContent",
