--- a/Meta/gn/secondary/Userland/Libraries/LibWebView/BUILD.gn
+++ b/Meta/gn/secondary/Userland/Libraries/LibWebView/BUILD.gn
@@ -131,6 +131,7 @@ shared_library("LibWebView") {
     ":generate_native_stylesheet_source",
     "//AK",
     "//Meta/gn/build/libs/sqlite3",
+    "//Userland/Libraries/LibAudioServer",
     "//Userland/Libraries/LibCore",
     "//Userland/Libraries/LibFileSystem",
     "//Userland/Libraries/LibGfx",
@@ -153,6 +154,7 @@ shared_library("LibWebView") {
     "Process.cpp",
     "ProcessHandle.cpp",
     "ProcessManager.cpp",
+    "ProcessPolicyRouter.cpp",
     "SearchEngine.cpp",
     "SourceHighlighter.cpp",
     "URL.cpp",
