--- a/Libraries/LibWebView/CMakeLists.txt
+++ b/Libraries/LibWebView/CMakeLists.txt
@@ -18,6 +18,7 @@ set(SOURCES
     Process.cpp
     ProcessHandle.cpp
     ProcessManager.cpp
+    ProcessPolicyRouter.cpp
     SearchEngine.cpp
     Settings.cpp
     SiteIsolation.cpp
@@ -70,7 +71,7 @@ set(GENERATED_SOURCES
 )
 
 ladybird_lib(LibWebView webview EXPLICIT_SYMBOL_EXPORT)
-target_link_libraries(LibWebView PRIVATE LibCore LibDatabase LibDevTools LibFileSystem LibGfx LibHTTP LibImageDecoderClient LibIPC LibRequests LibJS LibWeb LibUnicode LibURL LibSyntax LibTextCodec)
+target_link_libraries(LibWebView PRIVATE LibCore LibDatabase LibDevTools LibFileSystem LibGfx LibHTTP LibImageDecoderClient LibIPC LibRequests LibJS LibWeb LibUnicode LibURL LibSyntax LibTextCodec LibAudioServer)
 
 if (APPLE)
     target_link_libraries(LibWebView PRIVATE LibThreading)
