--- a/.github/workflows/libjs-test262.yml
+++ b/.github/workflows/libjs-test262.yml
@@ -6,7 +6,6 @@ on:
 
 env:
   LADYBIRD_SOURCE_DIR: ${{ github.workspace }}
-  LLVM_VERSION: 21
   VCPKG_ROOT: ${{ github.workspace }}/Build/vcpkg
 
 jobs:
@@ -51,73 +50,33 @@ jobs:
           repository: tc39/test262-parser-tests
           path: test262-parser-tests
 
-      # FIXME: Use the setup action from .github/actions/setup/action.yml.
-      - name: Install dependencies
+      - name: Set up environment
+        uses: ./.github/actions/setup
+        id: 'setup'
+        with:
+          os: 'Linux'
+          arch: 'x86_64'
+
+      # We are currently limited to CMake 3.28 in Ubuntu 24.04. Our build requires CMake 3.30 or later.
+      - name: Upgrade CMake
         run: |
-          UBUNTU_RELEASE=$(lsb_release -cs)
-
-          LLVM_LIST="/etc/apt/sources.list.d/llvm.list"
-          LLVM_TOOLCHAIN="llvm-toolchain-${UBUNTU_RELEASE}-${LLVM_VERSION}"
-
-          if [ ! -f "${LLVM_LIST}" ] || ! grep -q "${LLVM_TOOLCHAIN}" "${LLVM_LIST}" ; then
-            curl -f -o /usr/share/keyrings/llvm-snapshot.gpg.key https://apt.llvm.org/llvm-snapshot.gpg.key
-            echo "deb [signed-by=/usr/share/keyrings/llvm-snapshot.gpg.key] http://apt.llvm.org/${UBUNTU_RELEASE}/ ${LLVM_TOOLCHAIN} main" | sudo tee "${LLVM_LIST}"
-          fi
-
-          sudo apt-get update -y
-          sudo apt-get install -y \
-              autoconf \
-              autoconf-archive \
-              automake \
-              clang++-${LLVM_VERSION} \
-              clang-${LLVM_VERSION} \
-              curl \
-              jq \
-              libgl1-mesa-dev \
-              libtool \
-              nasm \
-              ninja-build \
-              pkg-config \
-              rsync \
-              tar \
-              unzip \
-              zip
-
-          # We are currently limited to CMake 3.28 in Ubuntu 24.04. Our build requires CMake 3.30 or later.
           CMAKE_VERSION=4.2.3
           CMAKE_NAME="cmake-${CMAKE_VERSION}-linux-x86_64"
+
           test -e ${CMAKE_NAME} || (
             curl -f -L -o "${CMAKE_NAME}.tar.gz" "https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/${CMAKE_NAME}.tar.gz"
             tar -xzf "./${CMAKE_NAME}.tar.gz"
             rm "./${CMAKE_NAME}.tar.gz"
+
             echo "${{ github.workspace }}/${CMAKE_NAME}/bin" >> $GITHUB_PATH
           )
-
-          WASM_TOOLS_VERSION=1.243.0
-          test -e /opt/wasm-tools-${WASM_TOOLS_VERSION} || (
-            NAME="wasm-tools-${WASM_TOOLS_VERSION}-x86_64-linux"
-            curl -f -L -o "${NAME}.tar.gz" "https://github.com/bytecodealliance/wasm-tools/releases/download/v${WASM_TOOLS_VERSION}/${NAME}.tar.gz"
-            tar -xzf "./${NAME}.tar.gz"
-            rm "./${NAME}.tar.gz"
-            echo "${{ github.workspace }}/${NAME}" >> $GITHUB_PATH
-          )
-
-          # FIXME: Just use the setup action
-          ./Toolchain/BuildVcpkg.py --ci
 
       - name: Print CMake version
         run: |
           cmake --version
 
-      - name: Setup Python
-        uses: actions/setup-python@v6
-        with:
-          python-version: '3.x'
-
       - name: Install Python dependencies
-        # The setup-python action set default python to python3.x. Note that we are not using system python here.
         run: |
-          python -m pip install --upgrade pip
           pip install -r libjs-test262/requirements.txt
 
       - name: Restore Caches
@@ -140,14 +99,12 @@ jobs:
           export HOME=${{ github.workspace }}/home
           mkdir -p $HOME
 
-          env CC=clang-${LLVM_VERSION} \
-            CXX=clang++-${LLVM_VERSION} \
-            cmake --preset Release -B libjs-test262/Build \
-              -DCMAKE_C_COMPILER=clang-${LLVM_VERSION} \
-              -DCMAKE_CXX_COMPILER=clang++-${LLVM_VERSION} \
-              -DWASM_SPEC_TEST_SKIP_FORMATTING=ON \
-              -DINCLUDE_WASM_SPEC_TESTS=ON \
-              -DENABLE_GUI_TARGETS=OFF
+          cmake --preset Release -B libjs-test262/Build \
+            -DCMAKE_C_COMPILER=clang-${{ steps.setup.outputs.llvm_version }} \
+            -DCMAKE_CXX_COMPILER=clang++-${{ steps.setup.outputs.llvm_version }} \
+            -DWASM_SPEC_TEST_SKIP_FORMATTING=ON \
+            -DINCLUDE_WASM_SPEC_TESTS=ON \
+            -DENABLE_GUI_TARGETS=OFF
           ninja -C libjs-test262/Build test262-runner test-js test-wasm test-js-bytecode
 
       - name: Run test262 and test262-parser-tests
