CI: Ensure pip itself is up to date
Our test262 runner already does this, and we do see out-of-date messages
in users of the setup action.

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -41,7 +41,9 @@ runs:
 
     - name: 'Install Python dependencies'
       shell: bash
-      run: pip install pyyaml requests six
+      run: |
+        python3 -m pip install --upgrade pip
+        pip install pyyaml requests six
 
     - name: 'Install Dependencies'
       if: ${{ inputs.os == 'Linux' }}
