LibWeb: Load cookies test from HTTP server
Allowing us to remove the internals hook.

--- a/Tests/LibWeb/TestConfig.ini
+++ b/Tests/LibWeb/TestConfig.ini
@@ -1,3 +1,7 @@
+[LoadFromHttpServer]
+; Cookies require HTTP(s) scheme.
+Text/input/cookie-working.html
+
 [Skipped]
 ; Consistently hang on macOS, see #1306
 Text/input/HTML/cross-origin-window-properties.html
