Tests/LibWeb: Disable multiple-navigable-cross-document-navigation.html
Extremely slow and often times out.

--- a/Tests/LibWeb/TestConfig.ini
+++ b/Tests/LibWeb/TestConfig.ini
@@ -301,3 +301,7 @@ Text/input/wpt-import/css/css-shapes/shape-outside/values/shape-outside-inset-00
 
 ; This is used internally by cssom-view elementsFromPoint tests.
 Text/input/wpt-import/css/cssom-view/iframe.html
+
+; Very slow test that frequently times out.
+; https://github.com/LadybirdBrowser/ladybird/issues/8046
+Text/input/navigation/multiple-navigable-cross-document-navigation.html
