LibWebView+UI: Add local-first omnibox suggestions index
Add a local OmniBox suggestion index with fast phrase/token prefix
matching, typo tolerance, term transitions, and ranking for
navigational intent.

Keep the index append-only for incremental updates, rebuild from
bookmarks and newest history first, enforce a configurable size cap,
and persist asynchronously with .tmp/.bak recovery and shutdown flush.

Normalize stored URLs for privacy and readability: strip query,
fragment, and credentials; decode IDNA and percent-encoding where
safe; collapse protocol/www noise for matching; and filter
unsafe/internal schemes.

Merge local and remote suggestions without flicker and deduplicate
results. Extend settings with index size control, advanced stats,
manual rebuild, and optional title-data search (applies on rebuild),
plus matching Qt/AppKit presentation updates and cross-platform
index-write compatibility improvements.

--- a/Libraries/LibWebView/CMakeLists.txt
+++ b/Libraries/LibWebView/CMakeLists.txt
@@ -70,11 +70,7 @@ set(GENERATED_SOURCES
 )
 
 ladybird_lib(LibWebView webview EXPLICIT_SYMBOL_EXPORT)
-target_link_libraries(LibWebView PRIVATE LibCore LibDatabase LibDevTools LibFileSystem LibGfx LibHTTP LibImageDecoderClient LibIPC LibRequests LibJS LibWeb LibUnicode LibURL LibSyntax LibTextCodec)
-
-if (APPLE)
-    target_link_libraries(LibWebView PRIVATE LibThreading)
-endif()
+target_link_libraries(LibWebView PRIVATE LibCore LibDatabase LibDevTools LibFileSystem LibGfx LibHTTP LibImageDecoderClient LibIPC LibRequests LibJS LibThreading LibWeb LibUnicode LibURL LibSyntax LibTextCodec)
 
 # Third-party
 if (HAS_FONTCONFIG)
